# support-chatbot

./: README.md  pyproject.toml
chatbot/: chatbot.py  config.py  create_vector_db.py  create_vector_store.py  front.py
vector_db/: chroma.sqlite3
