[tool.poetry]
name = "chatbot"
version = "0.0.1"
description = ""
authors = ["nizaz139 <nizarelghazal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
streamlit = "^1.32.2"
langchain = "^0.1.13"
langchain-openai = "^0.1.1"
chromadb = "^0.4.24"
beautifulsoup4 = "^4.12.3"
unstructured = {extras = ["pdf"], version = "^0.12.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
